--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .ENV
+.vscode
+
 # dependencies
 /node_modules
 client/node_modules
