--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "concurrently \"nodemon index.js\" \"cd client & npm run start\"",
+    "heroku-postbuild": "npm install && cd client && npm install --only=dev && npm install && npm run build"
   },
   "proxy": "http://127.0.0.1:3000/",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.0.0"
   }
