--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "socket.io-client": "^4.0.0",
+    "tachyons": "^4.12.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
