--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
+    "http-server": "^13.0.1",
     "socket.io": "^4.0.0"
   }
 }
