--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "shobu.com",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,5 +17,15 @@
     "express": "^4.17.1",
     "http-server": "^13.0.1",
     "socket.io": "^4.0.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dclaiche/shobusite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dclaiche/shobusite/issues"
+  },
+  "homepage": "https://github.com/dclaiche/shobusite#readme",
+  "description": ""
 }
