--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "framer-motion": "^4.1.17",
     "http-server": "^13.0.1",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "repository": {
