--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "concurrently \"nodemon index.js\" \"cd client & npm run start\"",
+    "dev": "concurrently \"node server.js\" \"cd client & npm run start\"",
     "heroku-postbuild": "npm install && cd client && npm install --only=dev && npm install && npm run build"
   },
   "proxy": "http://127.0.0.1:3000/",
