--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.1"
   },
+  "engines": {
+    "node": "16.14.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
